samples/_failures_safe/1761715686_681d1c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_40ce63c5.c: In function ‘main’:
./samples/SAFE/__tmp_40ce63c5.c:158:12: error: missing terminating " character
  158 |     printf("Enter expression to tokenize:
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_40ce63c5.c:158:5: error: expected expression at end of input
  158 |     printf("Enter expression to tokenize:
      |     ^~~~~~
./samples/SAFE/__tmp_40ce63c5.c:158:5: error: expected declaration or statement at end of input
